add distance on location
